# arkan_help

./: .pre-commit-config.yaml  BRAND.md  CHANGELOG.md  CONTEXT.md  INTEGRATIONS.md  README.md  SCENARIOS.md  conftest.py  license.txt  pyproject.toml
.github/workflows/: ci.yml  linters.yml
arkan_help/: __init__.py  demo.py  exceptions.py  gate.py  hooks.py  install.py  modules.txt  seed.py
arkan_help/api/: __init__.py  response.py
arkan_help/api/v1/: __init__.py
arkan_help/arkan_help/: boot.py
arkan_help/arkan_help/api/: help.py  translation.py
arkan_help/arkan_help/utils/: __init__.py  resolver.py  translation.py
arkan_help/caps/: capability.json  capability_bundle.json  role_capability_map.json
arkan_help/caps_integration/: __init__.py  gate.py
arkan_help/desktop_icon/: arkan_help.json
arkan_help/help/: _meta.json
arkan_help/help/ar/: _app.md  _getting_started.md  help_content.md  help_content_role.md  help_context.md  help_settings.md  help_topic.md
arkan_help/help/doctypes/: index.md
arkan_help/help/en/: _app.md  (+6 more)
arkan_help/services/: __init__.py  analytics_service.py  topic_service.py
arkan_help/tests/: conftest.py  test_api.py  test_permissions.py
arkan_help/translations/: ar.csv  es.csv
arkan_help/utils/: __init__.py  constants.py  formatters.py  validators.py
arkan_help/www/: arkan_help_about.html  arkan_help_about.py  arkan_help_onboarding.html  arkan_help_onboarding.py
docs/: ARCHITECTURE.md  COMPETITIVE_ANALYSIS.md  FAQ.md  PERSONAS.md  SALES_PLAYBOOK.md  TRAINING.md
docs/posts/: README.md
translations/: ar.csv
(+39 files in other folders)
